[package]
name = "geyser-grpc-looper"
version = "0.0.1"
edition = "2021"

description = "Allow consumers of yellowstone-grpc stream to emulate commitment level confirmed off an stream of PROCESSED data"
license = "Apache-2.0"
authors = ["GroovieGermanikus <grooviegermanikus@gmail.com>"]
repository = "https://github.com/grooviegermanikus/geyser-grpc-looper"

[dependencies]
yellowstone-grpc-proto = "10.1.1"

# required
solana-commitment-config = "3"
solana-clock = "3"

url = "2.5.0"
async-stream = "0.3.5"
tokio = { version = "1.28", features = ["rt-multi-thread"] }
tokio-metrics = { version = "0.4.0", default-features = false }
futures = "0.3.28"
merge-streams = "0.1.2"
anyhow = "1.0.70"
log = "0.4.17"
tracing = "0.1.37"
solana-signature = "3"
thiserror = "2"
itertools = "0.10.5"

tokio-stream = "~0.1.17"
tonic = "~0.14.0"
tonic-build = "~0.14.0"
tonic-prost = "~0.14.0"
tonic-prost-build = "~0.14.0"
tonic-health = "~0.14.0"

[dev-dependencies]
tracing-subscriber = "0.3.16"
solana-logger = "3"
solana-account-decoder = "~3.0.6"
solana-message = "3"
solana-transaction = "3"
solana-pubkey = "3"
solana-hash = "3"
solana-compute-budget = "3"
solana-compute-budget-interface = { version = "3", features = ["borsh"] }
solana-sdk-ids = "3"
solana-borsh = "3"
solana-bincode = "3"
solana-vote = "3"
solana-vote-interface = "3"

rustls = { version = "0.23", features = ["aws_lc_rs"] }
bs58 = "0.5.1"
base64 = "0.21.5"
bincode = "1.3.3"
csv = "1.3.0"
lz4_flex = "0.11.3"
dashmap = "6.1.0"
regex = "1.10.4"
clap = { version = "4.2", features = ["derive"] }

# patch curve25519-dalek is gone

[lints.clippy]
# should make procedural code more readable
needless_return = "allow"
# allow explicit testing
bool_assert_comparison = "allow"
# allow `len() checks`
len_zero = "allow"
# allow to use `match` to make code look consistent
single_match = "allow"
# allow use of base struct; needed for forward compatibility
needless_update = "allow"
# allow explict impl of `Default` trait
derivable_impls = "allow"
# allow +1 comparison
int_plus_one = "allow"
# allow structured `if`
collapsible_if = "allow"
# force use of `Arc::clone(p)` for clarity
#clone_on_ref_ptr = "deny"
# ensures that `const` is used where possible
missing_const_for_fn = "deny"
# prefer `copy` over reference for small types
trivially_copy_pass_by_ref = "deny"
# allow if-else chains for clarity
comparison_chain = "allow"
