[package]
name = "geyser-grpc-looper"
version = "0.0.1"
edition = "2021"

description = "Allow consumers of yellowstone-grpc stream to emulate commitment level confirmed off an stream of PROCESSED data"
license = "Apache-2.0"
authors = ["GroovieGermanikus <grooviegermanikus@gmail.com>"]
repository = "https://github.com/grooviegermanikus/geyser-grpc-looper"

[dependencies]
anyhow = "1"
itertools = "0.10"
log = "0.4"
thiserror = "2"
tracing = "0.1"

# Agave Monorepo

# Solana SDK
solana-clock = "3"
solana-commitment-config = "3"
solana-signature = "3"

# Solana Misc

# Yellowstone
yellowstone-grpc-proto = "10"

[dev-dependencies]
regex = "1.10"
solana-pubkey = "3"

[lints.clippy]
# should make procedural code more readable
needless_return = "allow"
# allow explicit testing
bool_assert_comparison = "allow"
# allow `len() checks`
len_zero = "allow"
# allow to use `match` to make code look consistent
single_match = "allow"
# allow use of base struct; needed for forward compatibility
needless_update = "allow"
# allow explict impl of `Default` trait
derivable_impls = "allow"
# allow +1 comparison
int_plus_one = "allow"
# allow structured `if`
collapsible_if = "allow"
# force use of `Arc::clone(p)` for clarity
#clone_on_ref_ptr = "deny"
# ensures that `const` is used where possible
missing_const_for_fn = "deny"
# prefer `copy` over reference for small types
trivially_copy_pass_by_ref = "deny"
# allow if-else chains for clarity
comparison_chain = "allow"
